RESOLVED FIXED67809
[chromium] KURL::copy doesn't produce something usable on another thread.
https://bugs.webkit.org/show_bug.cgi?id=67809
Summary [chromium] KURL::copy doesn't produce something usable on another thread.
David Levin
Reported 2011-09-08 15:09:25 PDT
[chromium] KURL::copy doesn't produce something usable on another thread.
Attachments
Patch (1.65 KB, patch)
2011-09-08 15:22 PDT, David Levin
abarth: review+
David Levin
Comment 1 2011-09-08 15:22:43 PDT
David Levin
Comment 2 2011-09-08 15:24:03 PDT
David Levin
Comment 3 2011-09-08 16:55:52 PDT
Note You need to log in before you can comment on or make changes to this bug.