[chromium] KURL::copy doesn't produce something usable on another thread. https://bugs.webkit.org/show_bug.cgi?id=67809

Reviewed by Adam Barth.

No new functionality exposed so no new test. This was caught by testing code: the thread
sanitizer run in Chromium (http://code.google.com/p/chromium/issues/detail?id=93708).

* platform/KURLGoogle.cpp:
(WebCore::KURLGooglePrivate::copyTo): Clear out the invalid String so that it will
not be used on another thread.

Canonical link: https://commits.webkit.org/83715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94821 268f45cc-cd09-0410-ab3c-d52691b4dbfc